# downloader-hub

./: .dockerignore  AGENTS.md  Cargo.toml  README.md  compose.yaml  docker-bake.hcl  justfile  mprocs.yaml
bins/downloader-admin/: AGENTS.md  Cargo.toml  build.rs
bins/downloader-admin/frontend/: index.html  package.json  tsconfig.tsbuildinfo  vite.config.ts
bins/downloader-admin/frontend/src/: App.tsx  main.tsx  router.tsx  styles.css
bins/downloader-admin/frontend/src/components/: AccountAutocomplete.tsx  AccountRequestsList.tsx  DataTable.tsx  RestrictionRuleFields.tsx  StatusBadge.tsx
bins/downloader-admin/frontend/src/lib/: api.ts  requestKind.ts  requestParked.ts  restrictions.ts  useAccountNames.ts  useAuthedNames.ts  useLiveStream.ts  useRequestColumns.tsx
bins/downloader-admin/frontend/src/pages/: AccountsPage.tsx  DashboardPage.tsx  LoginPage.tsx  MetricsPage.tsx  NodesPage.tsx  RequestDetail.tsx  RequestsPage.tsx  RestrictionsPage.tsx  Shell.tsx  TokensPage.tsx
bins/downloader-admin/frontend/src/stores/: auth-store.ts
bins/downloader-admin/src/: main.rs
bins/downloader-admin/src/cmd/: _config.rs  mod.rs
bins/downloader-admin/src/cmd/run/: config.rs  mod.rs
bins/downloader-admin/src/config/: mod.rs
bins/downloader-bot/: AGENTS.md  Cargo.toml
bins/downloader-bot/src/: main.rs
bins/downloader-bot/src/cmd/: mod.rs
bins/downloader-bot/src/cmd/_common/: account_refresh.rs  capabilities.rs  mod.rs  request_processor.rs  work_request.rs
bins/downloader-bot/src/cmd/_config/: mod.rs
bins/downloader-bot/src/cmd/discord/: config.rs  mod.rs
bins/downloader-bot/src/cmd/telegram/: config.rs  mod.rs
bins/downloader-bot/src/config/: mod.rs
bins/downloader-bot/src/peering/: mod.rs  reconnect.rs
bins/downloader-bot/src/peering/jwt/: mod.rs
bins/downloader-bot/src/peering/rpc/: broadcast.rs  mod.rs
bins/downloader-central/: AGENTS.md  Cargo.toml
bins/downloader-central/src/: main.rs
bins/downloader-central/src/cmd/: _config.rs  mod.rs
bins/downloader-central/src/cmd/central/: config.rs  mod.rs
bins/downloader-central/src/config/: mod.rs
bins/downloader-cli/: AGENTS.md  Cargo.toml
bins/downloader-cli/src/: main.rs
bins/downloader-cli/src/config/: mod.rs
bins/downloader-hub/: Cargo.toml
bins/downloader-hub/src/: main.rs
bins/downloader-hub/src/config/: mod.rs
bins/downloader-hub/src/queue/processor/: download_request.rs  download_result.rs  mod.rs
bins/downloader-hub/src/server/: mod.rs
bins/downloader-hub/src/server/app_middleware/: auth.rs
bins/downloader-hub/src/server/app_response/: mod.rs  range_responder.rs
bins/downloader-hub/src/server/routes/: index.rs  mod.rs
bins/downloader-hub/src/service/: client.rs  download_request.rs  download_result.rs  file.rs  signature.rs
bins/downloader-worker/: AGENTS.md  Cargo.toml
bins/downloader-worker/src/: main.rs
bins/downloader-worker/src/cmd/: _config.rs  mod.rs
bins/downloader-worker/src/cmd/list/: config.rs  mod.rs
bins/downloader-worker/src/cmd/work/: config.rs  global.rs  mod.rs  rpc.rs
bins/downloader-worker/src/config/: mod.rs
crates/app-actions/: AGENTS.md  Cargo.toml
crates/app-actions/src/: lib.rs
crates/app-actions/src/actions/: mod.rs
crates/app-actions/src/actions/common/: action_request.rs
crates/app-actions/src/actions/handlers/: compact_media.rs  mod.rs  ocr_image.rs  remove_background.rs  split_scenes.rs
crates/app-actions/src/common/: fallible.rs  mod.rs  url.rs
crates/app-actions/src/common/request/: mod.rs
crates/app-actions/src/config/: mod.rs
crates/app-actions/src/downloaders/: mod.rs
crates/app-actions/src/downloaders/common/: download_request.rs
crates/app-actions/src/downloaders/handlers/: generic.rs  mod.rs  yt_dlp.rs
crates/app-actions/src/extractors/: mod.rs
crates/app-actions/src/extractors/common/: extract_info_request.rs  extracted_info.rs
crates/app-actions/src/extractors/handlers/: bsky.rs  instagram.rs  mod.rs  threads.rs  tiktok.rs  tumblr.rs  twitter.rs  youtube.rs
crates/app-actions/src/fixers/: mod.rs
crates/app-actions/src/fixers/common/: command.rs  crop_filter.rs
crates/app-actions/src/fixers/handlers/: crop_image.rs  crop_video_bars.rs  file_extensions.rs  mod.rs  (+2 more)
crates/app-config/: AGENTS.md  Cargo.toml
crates/app-config/src/: lib.rs
crates/app-config/src/common/: database.rs  disabled_entries.rs  endpoint.rs  logging.rs  mod.rs  program_path.rs  project.rs  request.rs  task.rs
crates/app-config/src/conditional/: discord_bot.rs  mod.rs  server.rs  telegram_bot.rs
crates/app-config/src/traits/: dumpable.rs  global_config.rs
crates/app-config/src/validators/: url.rs
crates/app-database/: .dockerignore  AGENTS.md  Cargo.toml  package.json
crates/app-database/convex/: accounts.ts  authed.ts  connections.ts  convex.config.ts  cron.ts  requests.ts  restrictions.ts  schema.ts
crates/app-database/convex/_generated/: api.d.ts
crates/app-database/convex/helpers/: auth.ts  delivery.ts
crates/app-database/convex/lib/: requestCounts.ts  triggers.ts
crates/app-database/src/: client.rs  error.rs  lib.rs
crates/app-database/src/api/: connections.rs  mod.rs  request.rs
crates/app-database/src/entity/: _common.rs  mod.rs
crates/app-helpers/: AGENTS.md  Cargo.toml
crates/app-helpers/src/: ffprobe.rs  file_size.rs  id.rs  ip.rs  lib.rs  temp_dir.rs  temp_file.rs  tree_yielder.rs  unique_vec.rs
crates/app-helpers/src/config/: mod.rs
crates/app-helpers/src/futures/: killable.rs  mod.rs  retry_future.rs  run.rs  task_controller.rs
crates/app-logger/: AGENTS.md  Cargo.toml
crates/app-logger/src/: file_fields.rs  lib.rs  maybe_writer.rs
crates/app-peer-comms/: AGENTS.md  Cargo.toml
crates/app-peer-comms/src/: lib.rs
crates/app-peer-comms/src/jwt/: mod.rs  targeted.rs
crates/app-peer-comms/src/message/: mod.rs
crates/app-peer-comms/src/rpc/: auth_result.rs  mod.rs  request.rs  session.rs
crates/app-peer-comms/src/ticket/: bot.rs  mod.rs  targeted.rs  worker.rs
crates/app-requests/: AGENTS.md  Cargo.toml
crates/app-requests/src/: client.rs  crypto.rs  lib.rs
(+192 files in other folders)
