[workspace]
members = ["crates/*", "bins/*"]
resolver = "2"

[workspace.package]
version = "0.10.1"
authors = ["Allypost"]
description = "A meme downloader"
edition = "2024"
license = "MPL-2.0"

[workspace.dependencies]
app-actions = { version = "*", path = "crates/app-actions" }
app-config = { version = "*", path = "crates/app-config" }
app-database = { version = "*", path = "crates/app-database" }
app-helpers = { version = "*", path = "crates/app-helpers" }
app-logger = { version = "*", path = "crates/app-logger" }
app-macros = { version = "*", path = "crates/app-macros" }
app-peer-comms = { version = "*", path = "crates/app-peer-comms" }
app-requests = { version = "*", path = "crates/app-requests" }
app-tasks = { version = "*", path = "crates/app-tasks" }
anyhow = "1.0.102"
arc-swap = "1.9"
async-trait = "0.1.89"
clap = { version = "4.6.1", features = ["derive", "env"] }
derive_more = { version = "2.1.1", features = ["debug"] }
futures = { version = "0.3.32", features = ["thread-pool"] }
jiff = { version = "0.2", features = ["serde"] }
serde = { version = "1.0", features = ["derive", "alloc", "rc"] }
serde_json = { version = "1.0" }
size = { version = "0.5.0", features = ["serde"] }
thiserror = "2.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "fs", "process", "io-uring"] }
tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json", "parking_lot"] }
url = { version = "2.5.8", features = ["serde"] }
validator = "0.20.0"

[workspace.lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
# expect_used = "warn"
module_name_repetitions = "allow"
single_match_else = "allow"
manual_let_else = "allow"
uninlined_format_args = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
no_effect_underscore_binding = "allow"
cognitive_complexity = "allow"
unnecessary_debug_formatting = "allow"
redundant_type_annotations = "warn"
needless_collect = "warn"

[profile.release]
strip = true
# opt-level = "s"
lto = "thin"
# panic = "abort"
codegen-units = 1
incremental = false

[profile.release-cli]
inherits = "release"
opt-level = "s"
lto = true
panic = "abort"
