[package]
name = "downloader-bot"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
app-config.workspace = true
app-helpers.workspace = true
app-logger.workspace = true
app-peer-comms.workspace = true
clap.workspace = true
const_format = "0.2.35"
dotenvy = "0.15.7"
futures.workspace = true
postcard = "1.1.3"
rand = "0.9.2"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "deflate", "gzip", "brotli", "rustls-tls", "trust-dns"] }
serde.workspace = true
serde_json.workspace = true
serenity = "0.12.4"
shlex = "1.3.0"
teloxide = { version = "0.17.0", default-features = false, features = ["cache-me", "macros", "rustls", "trace-adaptor"] }
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite = { version = "0.28.0", features = ["rustls", "rustls-tls-webpki-roots", "url"] }
tracing.workspace = true
url.workspace = true
validator.workspace = true

[lints]
workspace = true
