[package]
name = "downloader-bot"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
app-config.workspace = true
app-database.workspace = true
app-helpers.workspace = true
app-logger.workspace = true
app-peer-comms.workspace = true
app-requests.workspace = true
arc-swap.workspace = true
clap.workspace = true
const_format = "0.2.35"
dotenvy = "0.15.7"
futures.workspace = true
http = "1.4.2"
linkify = "0.11.0"
postcard = "1.1.3"
rand = "0.10.1"
serde.workspace = true
serde_json.workspace = true
serenity = "0.12.4"
shlex = "2.0.1"
teloxide = { version = "0.17.0", default-features = false, features = ["cache-me", "macros", "rustls", "trace-adaptor"] }
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite = { version = "0.29.0", features = ["rustls", "rustls-tls-webpki-roots", "url"] }
tracing.workspace = true
url.workspace = true
validator.workspace = true

[lints]
workspace = true
