[package]
name = "downloader-central"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
accept-header = "0.2.3"
app-config.workspace = true
app-database.workspace = true
app-helpers.workspace = true
app-logger.workspace = true
app-peer-comms.workspace = true
axum = { version = "0.8.6", features = ["macros", "multipart", "ws"] }
axum-client-ip = { version = "1.1.3", features = ["forwarded-header"] }
axum-extra = { version = "0.12.6", features = ["typed-header"] }
chrono.workspace = true
clap.workspace = true
const_format = "0.2.35"
dotenvy = "0.15.7"
futures.workspace = true
http = "1.4.2"
mime = "0.3.17"
postcard = { version = "1.1.3", features = ["alloc"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower = "0.5.2"
tower-http = { version = "0.7.0", features = ["full"] }
tracing.workspace = true
tungstenite = "0.29.0"
ulid = "1.2.1"
validator.workspace = true

[lints]
workspace = true
