[package]
name = "downloader-hub"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
app-actions.workspace = true
app-config.workspace = true
app-entities = { version = "*", path = "../../crates/app-entities" }
app-helpers.workspace = true
app-logger.workspace = true
app-migration = { version = "*", path = "../../crates/app-migration" }
app-tasks.workspace = true
axum = { version = "0.8.4", features = ["macros", "multipart"] }
axum-extra = { version = "0.12.6", features = ["erased-json", "form", "multipart", "typed-header", "with-rejection"] }
chrono.workspace = true
clap.workspace = true
deadqueue = "0.2.5"
digest = "0.11.3"
dotenvy = "0.15.7"
futures.workspace = true
hmac = "0.13.0"
listenfd = "1.0.2"
sea-orm = { version = "1.1.14", features = [
    "macros",
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "debug-print",
    "sea-orm-internal",
] }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.11.0"
thiserror.workspace = true
tokio.workspace = true
tower = "0.5.2"
tower-http = { version = "0.7.0", features = ["full"] }
tracing.workspace = true
ulid = { version = "1.2.1", features = ["postgres"] }
url.workspace = true
validator.workspace = true

[lints]
workspace = true
