[package]
name = "downloader-worker"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
app-actions.workspace = true
app-config.workspace = true
app-helpers.workspace = true
app-logger.workspace = true
app-peer-comms.workspace = true
app-requests.workspace = true
app-tasks.workspace = true
chrono.workspace = true
clap.workspace = true
const_format = "0.2.35"
dotenvy = "0.15.7"
futures.workspace = true
http = "1.4.2"
moka = { version = "0.12.11", features = ["future"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite = { version = "0.29.0", features = ["rustls", "rustls-tls-webpki-roots", "url"] }
tracing.workspace = true
tungstenite = "0.29.0"
url.workspace = true
validator.workspace = true

[lints]
workspace = true
