[package]
name = "downloader-worker"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
app-actions.workspace = true
app-config.workspace = true
app-helpers.workspace = true
app-logger.workspace = true
app-peer-comms.workspace = true
app-requests.workspace = true
app-tasks.workspace = true
arc-swap.workspace = true
clap.workspace = true
const_format = "0.2.35"
dotenvy = "0.15.7"
futures.workspace = true
http = "1.4.2"
jiff.workspace = true
rand = "0.10.1"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
validator.workspace = true

[lints]
workspace = true
