[package]
name = "app-actions"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
app-config.workspace = true
app-helpers.workspace = true
async-trait.workspace = true
derive_more.workspace = true
encoding_rs = "0.8.35"
form_urlencoded = "1.2.1"
futures.workspace = true
http = "1.3.1"
http-serde = "2.1.1"
image = "0.25.6"
infer = "0.19.0"
language-tags = "0.3.2"
mime2ext = "0.1.54"
parse-size = "1.1.0"
percent-encoding = "2.3.1"
regex = "1.11.1"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "deflate", "gzip", "brotli", "rustls-tls", "trust-dns", "cookies", "stream", "multipart"] }
resolve-path = "0.1.0"
scraper = "0.25.0"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tl = "0.7.8"
tokio.workspace = true
tokio-util = { version = "0.7.16", features = ["codec"] }
tracing.workspace = true
typetag = "0.2.20"
unicode-segmentation = "1.12.0"
url.workspace = true
validator.workspace = true
zip = { version = "6.0.0", default-features = false, features = ["aes-crypto", "deflate", "deflate64", "lzma", "time", "zstd"] }

[lints]
workspace = true
