[package]
name = "app-actions"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
app-config.workspace = true
app-helpers.workspace = true
app-requests.workspace = true
async-trait.workspace = true
derive_more.workspace = true
encoding_rs = "0.8.35"
form_urlencoded = "1.2.2"
futures.workspace = true
http = "1.4.2"
http-serde = "2.1.1"
image = "0.25.10"
infer = "0.19.0"
jiff.workspace = true
language-tags = "0.3.2"
mime2ext = "0.1.54"
parse-size = "1.1.0"
percent-encoding = "2.3.2"
regex = "1.12.4"
resolve-path = "0.1.0"
scraper = "0.27.0"
serde.workspace = true
serde_json.workspace = true
size.workspace = true
thiserror.workspace = true
tl = "0.7.8"
tokio.workspace = true
tokio-util = { version = "0.7.18", features = ["codec"] }
tracing.workspace = true
typetag = "0.2.22"
unicode-segmentation = "1.13.3"
url.workspace = true
validator.workspace = true
zip = { version = "8.6.0", default-features = false, features = ["aes-crypto", "deflate", "deflate64", "lzma", "time", "zstd"] }

[lints]
workspace = true
