[package]
name = "app-config"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app-macros.workspace = true
clap = { version = "4.6.1", features = ["derive", "env"] }
clap_complete = "4.6.5"
compile-time = "0.2.0"
data-encoding = "2.11.0"
derive_more = "2.1.1"
directories-next = "2.0.0"
serde.workspace = true
serde_json.workspace = true
size.workspace = true
toml = "1.1.2"
url.workspace = true
validator = { version = "0.20.0", features = ["derive"] }
which = "8.0.3"

[lints]
workspace = true
