[package]
name = "app-database"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
app-config.workspace = true
convex = { version = "0.10.1", default-features = false, features = ["parking_lot", "rustls-tls-webpki-roots"] }
data-encoding = "2.9.0"
derive_more = "2.0.1"
futures.workspace = true
maplit = "1.0.2"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true

[lints]
workspace = true
