[package]
name = "app-helpers"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64 = "0.22.1"
app-config.workspace = true
serde.workspace = true
serde_json.workspace = true
trash = "5.2.3"
tokio.workspace = true
thiserror.workspace = true
tryhard = "0.5.2"
infer = "0.19.0"
tree_magic_mini = "3.2.0"
file-format = { version = "0.28.0", features = ["reader"] }
mime = "0.3.17"
addr = "0.15.6"
url.workspace = true
ipnet = "2.11.0"
iprange = "0.6.7"
dns-lookup = "3.0.0"
filetime = "0.2.25"
tracing.workspace = true
validator.workspace = true
tokio-util = "0.7.16"
signal-hook = "0.3.18"
rand = "0.9.2"
parse-size = "1.1.0"

[lints]
workspace = true
