[package]
name = "app-logger"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
app-config.workspace = true
tracing.workspace = true
tracing-appender = { version = "0.2.5", features = ["parking_lot"] }
tracing-subscriber.workspace = true

[lints]
workspace = true
