[package]
name = "app-peer-comms"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
app-config.workspace = true
app-database.workspace = true
bao-tree = "0.16.0"
bytes = { version = "1.10.1", features = ["serde"] }
chrono.workspace = true
data-encoding = "2.9.0"
derive_more = "2.0.1"
futures.workspace = true
iroh = { version = "0.95", features = ["discovery-local-network", "discovery-pkarr-dht"] }
iroh-blobs = "0.97"
iroh-gossip = { version = "0.95", features = [] }
iroh-tickets = "0.2"
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
moka = { version = "0.12.11", features = ["future"] }
postcard = { version = "1.1.3", features = ["alloc", "crc"] }
rand = "0.9.2"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
