[package]
name = "app-peer-comms"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
app-config.workspace = true
app-database.workspace = true
app-requests.workspace = true
bao-tree = "0.16.0"
bytes = { version = "1.11.1", features = ["serde"] }
chrono.workspace = true
data-encoding = "2.11.0"
derive_more = "2.1.1"
futures.workspace = true
iroh = { version = "1.0", features = ["fast-apple-datapath", "metrics", "portmapper", "tls-aws-lc-rs"], default-features = false }
iroh-blobs = "0.103"
iroh-gossip = { version = "0.101", features = [] }
iroh-mdns-address-lookup = "0.4.0"
iroh-tickets = "1.0"
irpc = { version = "0.17", features = ["derive"] }
irpc-iroh = "0.17"
moka = { version = "0.12.15", features = ["future"] }
postcard = { version = "1.1.3", features = ["alloc", "crc"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
