[package]
name = "app-requests"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
derive_more.workspace = true
http = "1.4.2"
http-serde = "2.1.1"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "deflate", "gzip", "brotli", "cookies", "stream", "multipart", "rustls"] }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "logging", "aws_lc_rs"] }
rustls-native-certs = "0.8"
serde.workspace = true
url.workspace = true
webpki-root-certs = "1.0.7"

[lints]
workspace = true
